[tool.poetry]
name = "lang-chain-learning"
version = "0.1.0"
description = ""
authors = ["Nathan Stuart <nathan.stuart01@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
langchain = "^0.0.350"
langchain-experimental = "^0.0.47"
openai = "^1.3.9"
python-dotenv = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
